--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
 asgiref==3.8.1
+Brotli==1.1.0
+click==8.1.7
+colorama==0.4.6
 distlib==0.3.8
+dj-database-url==2.1.0
 Django==5.0.3
 django-cors-headers==3.7.0
 django-environ==0.11.2
@@ -7,9 +11,13 @@ django-storages==1.11.1
 djangorestframework==3.15.1
 djangorestframework-simplejwt==5.3.1
 filelock==3.13.1
+gunicorn==21.2.0
+h11==0.14.0
+packaging==24.0
 pillow==10.2.0
 platformdirs==4.2.0
 psycopg2==2.9.1
+psycopg2-binary==2.9.9
 pycodestyle==2.7.0
 PyJWT==2.1.0
 python-dotenv==1.0.1
@@ -20,5 +28,6 @@ toml==0.10.2
 typing_extensions==4.10.0
 tzdata==2024.1
 urllib3==1.26.6
+uvicorn==0.29.0
 virtualenv==20.25.1
 whitenoise==5.2.0
