uncomment DATABASE_URL on settings

--- a/devsearch/config/.env
+++ b/devsearch/config/.env
@@ -3,5 +3,5 @@ USER_PASSWORD=@Beth23498812
 DEBUG=False
 EMAIL_PORT=587
 EMAIL_HOST_USER=config("USER_EMAIL", default="bethuelthipe@gmail.com")
-SECRET_KEY=django-insecure--4iws!uc#2j2cwb2llj!)k&lw3=+zy^2cxqrdj2h=nai8eiq*8
-
+#SECRET_KEY=django-insecure--4iws!uc#2j2cwb2llj!)k&lw3=+zy^2cxqrdj2h=nai8eiq*8
+SECRET_KEY = 'django-insecure--4iws!uc#2j2cwb2llj!)k&lw3=+zy^2cxqrdj2h=nai8eiq*8'
