--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ dj-database-url==2.1.0
 Django==5.0.3
 django-cors-headers==3.7.0
 django-environ==0.11.2
+django-heroku==0.3.1
 django-storages==1.11.1
 djangorestframework==3.15.1
 djangorestframework-simplejwt==5.3.1
