--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ psycopg2==2.9.9
 psycopg2-binary==2.9.9
 pycodestyle==2.7.0
 PyJWT==2.1.0
+python-decouple==3.8
 python-dotenv==1.0.1
 pytz==2021.1
 six==1.16.0
