--- a/devsearch/config/.env
+++ b/devsearch/config/.env
@@ -2,4 +2,5 @@ USER_EMAIL=moukangwebethuel@gmail.com
 USER_PASSWORD=@Beth23498812
 DEBUG=True
 
-EMAIL_HOST_USER = config("USER_EMAIL", default="moukangwebethuel@gmail.com")
+EMAIL_HOST_USER=config("USER_EMAIL", default="moukangwebethuel@gmail.com")
+SECRET_KEY=django-insecure--4iws!uc#2j2cwb2llj!)k&lw3=+zy^2cxqrdj2h=nai8eiq*8
